Complete view of forms [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -459,21 +459,25 @@ div.page-encounter.prenatal {
     }
 }
 
-// Prenatal Activity page
+// Acute Illness Activity page
 div.page-activity.acute-illness {
 
   .ui.full.segment {
 
-    .form-input {
+    .label {
+      margin-bottom: 5px;
+    }
 
-      // Pregnanacy Dating Inputs
-      &.period {
-        background: $color-white;
-        border: 2px solid $color-light-gray;
-        margin-top: -10px;
-        padding: 5px;
-        width: 100%;
-      }
+    .helper {
+      margin-bottom: 20px;
+    }
+
+    .form-input.period {
+      background: $color-white;
+      border: 2px solid $color-light-gray;
+      margin-top: -10px;
+      padding: 5px;
+      width: 100%;
     }
 
     .days-present {
@@ -481,11 +485,8 @@ div.page-activity.acute-illness {
       font-weight: 700;
     }
 
-    .separator {
-      border: 1px solid;
-      color: $color-light-gray;
-      margin: 30px 0;
-      width: 100%;
+    .checkbox.activity {
+      margin-bottom: 12px;
     }
   }
 }
