Update the reference data. [skip ci]

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -33,6 +33,10 @@ svg.z-score {
     fill: #0097DA;
   }
 
+  .z-score-pink {
+    fill: #CE52AC;
+  }
+
   .z-score-white {
     fill: #FFFFFF;
   }
