--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -480,6 +480,40 @@ div.page-activity.acute-illness {
       width: 100%;
     }
 
+    .form-input.measurement {
+      margin-bottom: 10px;
+
+      .unit {
+        float: left;
+        font-weight: 700;
+        margin-left: 20px;
+        margin-top: 10px;
+        width: 35%;
+      }
+
+      input {
+        background-color: $color-white;
+        border: 2px solid $color-gray-border;
+        float: left;
+        width: 60%;
+      }
+
+      &.disabled input{
+        pointer-events: none;
+      }
+    }
+
+    .previous-value {
+      display: inline-block;
+      font-size: 18px;
+      width: 100%;
+    }
+
+    .separator {
+      margin: 30px 0;
+      width: 100%;
+    }
+
     .days-present {
       font-size: 20px;
       font-weight: 700;
