Style icon [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -418,7 +418,7 @@ h3.ui.header {
 }
 
 .icon-task-laboratory {
-  background-image: url(#{$img-path}icon-laboratory.svg);
+  background-image: url(#{$img-path}icon-laboratory-white.svg);
   background-size: 78px 78px;
 }
 
