--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -521,6 +521,7 @@ div.page-nutrition-activity {
 
         // Number inputs
         &.measurement {
+          height: 50px;
           margin-bottom: 10px;
 
           .unit {
