--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -491,6 +491,11 @@ div.page-activity.acute-illness {
       margin-bottom: 20px;
     }
 
+    .question-helper {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
     .form-input.period {
       background: $color-white;
       border: 2px solid $color-light-gray;
