--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -332,7 +332,7 @@ div.page-person {
   }
 }
 
-//Common for Prenatal Encounter and Prenatal Activity pages
+// Common for Prenatal Encounter and Prenatal Activity pages
 div.page-prenatal-activity,
 div.page-nutrition-activity,
 div.page-prenatal-encounter,
@@ -430,7 +430,8 @@ div.page-prenatal-activity {
     }
 }
 
-// Prenatal Encounter page
+// Prenatal Encounter and Nutrition Encounter pages
+div.page-nutrition-encounter,
 div.page-prenatal-encounter {
 
     .ui.full.segment {
