Change orientation styling [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -21,8 +21,8 @@ body {
         background-image: none;
     }
 
-    img.rotate-90 {
-      transform: rotate(90deg);
+    img.orientation {
+      image-orientation: none;
     }
 }
 
