--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -397,6 +397,13 @@ div.page-activity {
   }
 }
 
+.sync-status {
+
+  li.active {
+    font-weight: bold;
+  }
+}
+
 //Device Status Page
 .device-status {
   button {
