Modify code with adaptations to new UI

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -346,9 +346,11 @@ div.page-activity {
           width: 35%;
         }
 
-        input {
+        input,
+        select {
           background-color: $color-white;
           border: 2px solid $color-gray-border;
+          color: $color-text;
           float: left;
           width: 60%;
         }
