--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -597,6 +597,7 @@ div.page-activity.acute-illness {
     .form-input.period {
       background: $color-white;
       border: 2px solid $color-light-gray;
+      margin-bottom: 0;
       margin-top: -10px;
       padding: 5px;
       width: 100%;
