--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -581,6 +581,10 @@ div.page-activity.acute-illness {
       min-height: 210px;
     }
 
+    .symptoms-form.gi .symptoms {
+      margin-bottom: 30px;
+    }
+
     .label {
       margin-bottom: 5px;
     }
