--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -667,6 +667,10 @@ div.page-activity.acute-illness {
         top: 25px;
         width: 14px;
       }
+
+      &.derived {
+        margin-left: 70px;
+      }
     }
 
     .checkbox-select-input {
