--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -22,6 +22,8 @@ $color-light-blue:        #29C2FF;
 $color-lighter-blue:      #E0E7FF;
 $color-white:             #FFFFFF;
 $color-svg-grid:          #8097B1;
+$color-gray-border:       #D9D9D9;
+
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
