Fix a bug at family planning calculations [ci skip]

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -91,6 +91,10 @@
       .row {
         position: relative;
 
+        .no-data-message {
+          margin-top: 40px;
+        }
+
         .content {
           width: 100%;
           text-align: center;
