A fix [ci skip]

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -283,6 +283,10 @@ svg.z-score {
     text-transform: uppercase;
   }
 
+  .ui.table tr td.first.kinyarwanda {
+    font-size: 0.95rem;
+  }
+
   .negative {
     color: #FF1501 !important;
   }
