--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1791,7 +1791,7 @@ input::placeholder {
 
     .search-middle {
       flex: 1 1 auto;
-      overflow-y: hidden;
+      overflow: hidden;
 
       .ui.middle.aligned.divided.list {
         height: 100%;
