--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -687,6 +687,15 @@ div.page-activity.acute-illness {
       }
     }
 
+    .form-input.rapid-test-result {
+      background: $color-white;
+      border: 2px solid $color-light-gray;
+      color: $color-text;
+      margin-bottom: 150px;
+      padding: 5px;
+      width: 60%;
+    }
+
     .checkbox-select-input {
       padding-bottom: 15px;
 
