--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -604,6 +604,18 @@ div.page-encounter.acute-illness {
 // Acute Illness Activity page
 div.page-activity.acute-illness {
 
+  .item .content.person-details {
+    padding-top: 0 !important;
+
+    h2 {
+      margin-bottom: 5px;
+    }
+
+    .age-wrapper {
+      margin-bottom: 5px;
+    }
+  }
+
   .ui.full.segment {
 
     .full.content {
