View medication distribution form for GI [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -629,7 +629,6 @@ div.page-activity.acute-illness {
     .ui.form.medication-distribution {
 
       h2 {
-        margin-bottom: 20px;
         text-transform: uppercase;
       }
 
@@ -643,9 +642,10 @@ div.page-activity.acute-illness {
 
         .header {
           margin-bottom: 5px;
+          margin-top: 20px;
         }
 
-        .dosage {
+        .prescription {
           margin-left: 30px;
         }
       }
