Redesign assesment popup - issue #1754 [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1140,10 +1140,10 @@ input::placeholder {
     }
   }
 
-  &.warning-popup {
+  &.diagnosis-popup {
     border-top: 15px solid $color-red-alert;
-    width: 600px !important;
     margin-left: -300px !important;
+    width: 600px !important;
 
     > .content {
       display: inline-block;
@@ -1195,6 +1195,28 @@ input::placeholder {
       background: $color-red-alert;
       margin-left: 0;
     }
+
+    &.blue {
+      border-top: 15px solid $color-primary;
+
+      .popup-heading-wrapper {
+        margin-bottom: 2rem;
+
+        .popup-heading {
+          width: 100%;
+        }
+      }
+
+      .popup-title {
+        font-weight: 400;
+        text-transform: none;
+      }
+
+      .button {
+        background-color: $color-primary;
+      }
+    }
+
   }
 
   > .icon:first-child+*,
