--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -442,6 +442,11 @@ h3.ui.header {
   background-size: 78px 78px;
 }
 
+.icon-task-next-steps {
+  background-image: url(#{$img-path}icon-next-steps.svg);
+  background-size: 78px 78px;
+}
+
 // Tasks horizontal scroll
 
 .ui.task.segment {
