Reports tab and it's contents [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -548,7 +548,8 @@ div.page-activity {
 
 // Prenatal Encounter and Nutrition Encounter pages
 div.page-encounter.nutrition,
-div.page-encounter.prenatal {
+div.page-encounter.prenatal,
+div.page-encounter.acute-illness {
 
     .ui.full.segment {
 
