Fix color [ci skip]

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -13,7 +13,7 @@ $color-light-gray: #e6e6e6;
 $color-dark-gray:  #848484;
 $color-darker-gray: #6b6b6b;
 $color-red:        #ff0000;
-$color-red-alert:  #d4145a;
+$color-red-alert:  #d62766;
 $color-green-alert: #86a156;
 $color-light-blue: #29c2ff;
 $color-white:      #fff;
