--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -16,7 +16,10 @@ $color-red:        #ff0000;
 $color-red-alert:  #d62766;
 $color-green-alert: #86a156;
 $color-light-blue: #29c2ff;
-$color-white:      #fff;
+$color-white:      #ffffff;
+$color-symptom-general: #D4145A;
+$color-symptom-respiratory: #F7931E;
+$color-symptom-gi: #4c06ff;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
